--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -7,7 +7,12 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="com.msandypr.thesandynews.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="ArticleFragment">
+
+        <argument
+            android:name="article"
+            app:argType="com.msandypr.thesandynews.models.Article"
+    </fragment>
     <fragment
         android:id="@+id/bookmarkFragment2"
         android:name="com.msandypr.thesandynews.ui.fragments.BookmarkFragment"
