--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,4 +19,10 @@
         android:icon="@drawable/baseline_search">
     </item>
 
+    <item
+        android:id="@+id/mlkitFragment"
+        android:title="ML Kit"
+        android:icon="@drawable/baseline_mlkit">
+    </item>
+
 </menu>
