feat: runtime permission and image pick

--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -29,6 +29,9 @@
         <action
             android:id="@+id/action_headlineFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
+        <action
+            android:id="@+id/action_headlinesFragment_to_qrCodeFragment"
+            app:destination="@id/qrCodeFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
@@ -41,5 +44,9 @@
     <fragment
         android:id="@+id/qrCodeFragment"
         android:name="com.msandypr.thesandynews.ui.fragments.QrCodeFragment"
-        android:label="QrCodeFragment" />
+        android:label="QrCodeFragment" >
+        <action
+            android:id="@+id/action_qrCodeFragment_to_headlinesFragment2"
+            app:destination="@id/headlinesFragment" />
+    </fragment>
 </navigation>
