--- a/app/src/main/res/layout/fragment_qr_code.xml
+++ b/app/src/main/res/layout/fragment_qr_code.xml
@@ -13,14 +13,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/poppins"
             android:text="@string/qr_amp_barcode_scanner"
             android:textAlignment="center"
-            android:textColor="#43A047"
+            android:textColor="@color/green"
             android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="TextContrastCheck" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +35,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/camera"
+                android:textColor="@color/black"
                 android:layout_marginEnd="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"/>
 
             <com.google.android.material.button.MaterialButton
@@ -41,7 +45,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/black"
                 android:text="@string/gallery"
+                android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"/>
         </LinearLayout>
 
@@ -50,24 +56,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_gallery"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/pick_an_image_from_gallery" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/scanButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Scan"/>
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/black"
+            android:text="@string/scan"/>
 
         <TextView
             android:layout_width="match_parent"
-            android:text="Result:"
+            android:text="@string/result"
             style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
             android:id="@+id/resultTv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
     </LinearLayout>
 
 </ScrollView>
