feat: Enhance extractBarcodeQrCodeInfo when valueType is TYPE_EMAIL

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -23,7 +23,7 @@
     <item
         android:id="@+id/qrCodeFragment"
         android:title="QR Code"
-        android:icon="@drawable/baseline_mlkit">
+        android:icon="@drawable/baseline_qrcode">
     </item>
 
 </menu>
