--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,68 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="505"
+    android:viewportHeight="505">
+  <group android:scaleX="0.74"
+      android:scaleY="0.74"
+      android:translateX="65.65"
+      android:translateY="65.65">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M252.5,252.5m-252.5,0a252.5,252.5 0,1 1,505 0a252.5,252.5 0,1 1,-505 0"
+        android:fillColor="#90DFAA"/>
+    <path
+        android:pathData="M179.4,418.9l0,-53.6l-53.5,0l0,-279.2l253.2,0l0,332.8z"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M179.4,418.9l-53.5,-53.6l53.5,0z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M194,112.2h9.1v40.7H194l-19.4,-25.5v25.5h-9.1v-40.7h8.5l20,26.2V112.2z"
+        android:fillColor="#FF7058"/>
+    <path
+        android:pathData="M242.4,112.2v8.1h-20.2v8.4h18.2v7.7h-18.2v8.4h20.9v8h-30v-40.7h29.3V112.2z"
+        android:fillColor="#FF7058"/>
+    <path
+        android:pathData="M263.8,135.6l7.2,-23.4h9.5l7.2,23.4l8.1,-23.4h9.8l-14.2,40.7h-6.8l-8.9,-28.3l-8.8,28.3h-6.7L246,112.2h9.8L263.8,135.6z"
+        android:fillColor="#FF7058"/>
+    <path
+        android:pathData="M319.6,120.3c-0.9,0.7 -1.3,1.7 -1.3,2.8s0.5,2.1 1.6,2.8s3.5,1.5 7.4,2.5s6.9,2.4 9,4.3c2.1,1.9 3.2,4.7 3.2,8.3s-1.4,6.6 -4.1,8.9c-2.7,2.3 -6.3,3.4 -10.8,3.4c-6.4,0 -12.2,-2.4 -17.4,-7.2l5.4,-6.6c4.4,3.8 8.4,5.8 12.2,5.8c1.7,0 3,-0.4 3.9,-1.1c1,-0.7 1.4,-1.7 1.4,-2.9s-0.5,-2.2 -1.5,-2.9s-3,-1.4 -6,-2.2c-4.7,-1.1 -8.2,-2.6 -10.4,-4.4c-2.2,-1.8 -3.3,-4.6 -3.3,-8.5s1.4,-6.8 4.2,-8.9c2.8,-2.1 6.2,-3.1 10.4,-3.1c2.7,0 5.4,0.5 8.1,1.4s5.1,2.2 7.1,4l-4.6,6.6c-3.5,-2.7 -7.2,-4 -10.9,-4C321.7,119.2 320.5,119.6 319.6,120.3z"
+        android:fillColor="#FF7058"/>
+    <path
+        android:pathData="M148.7,175.9h207.6v3.8h-207.6z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M148.7,168.2h207.6v3.8h-207.6z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M148.7,191.5h92.5v65.8h-92.5z"
+        android:fillColor="#ACB3BA"/>
+    <path
+        android:pathData="M148.7,270.8h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M148.7,293.3h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M148.7,315.8h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M148.7,338.3h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M263.8,284h92.5v65.8h-92.5z"
+        android:fillColor="#ACB3BA"/>
+    <path
+        android:pathData="M263.8,258.9h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M263.8,236.4h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M263.8,213.9h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+    <path
+        android:pathData="M263.8,191.5h92.5v11.5h-92.5z"
+        android:fillColor="#E6E9EE"/>
+  </group>
 </vector>
