--- a/app/src/main/res/layout/fragment_root_check.xml
+++ b/app/src/main/res/layout/fragment_root_check.xml
@@ -36,6 +36,6 @@
         android:layout_marginTop="16dp"
         android:text="Perangkat Terdeteksi\n..."
         android:textAlignment="center"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/black" />
 
 </RelativeLayout>
